# devlab-sandbox-orchestrator

./: .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  __main__.py  cli.py  orchestrator.py  our-pot-app.yaml.example  pyproject.toml
config/: project.py
docs/: 20250112-eval-devlab-vs-claude-code.md  20251223-concepts-devlab.md  20251223-decision-implementation artifacts.md  20251223-previous work-pilot poc summary.md  20251223-previous work-valid critique.md  20251224-architecture-backbone.md  20251224-architecture-task hierarchy-schema.md  20251224-architecture-task hierarchy.md  20251224-helpful-tools-to-leverage.md  20251226-architecture-mcp-ecosystem-survey.md  20251226-architecture-sandbox-solutions.md  20251226-architecture-task hierarchy-agent context requirements.md  20251226-architecture-task hierarchy-speckit.md  20251226-architecture-task hierarchy-tracking integration.md  20251228-architecture-sandbox-testing.md  20251229-architecture-sandbox-AIO sandbox security audit.md  20251229-architecture-sandbox-solution-decisions.md  20251230-operating-model-architecture-guidance.md  20251230-operating-model-truth-layers.md  20251230-operating-model-work-decomposition.md  20251230-previous work-pilot reusables.md  20251230-reference-claude code cli features.md  ARCHITECTURE_INDEX.md  Document Status Summary.md  my-command-history.md
layers/: build.py
notes/: n8n-devlab-task-notification-workflow.json
prototype-speckit-linear/: sample-tasks.md  sync_to_linear.py
sandbox-testing/: Dockerfile.test
src/devlab/: __main__.py  (+5 more)
tests/: test_prompts.py
(+30 files in other folders)
