[project]
name = "devlab"
version = "0.1.0"
description = "Runtime Orchestrator for AI agents"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
]

[project.scripts]
devlab = "devlab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devlab = ["images/*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
